--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -41,7 +41,7 @@
   </section>
 
   <!-- Form -->
-  <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading" [ngClass]="{formB : formToggle}">
+  <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading" [ngClass]="{formB : formToggle}" (window:resize)="onResize($event)">
     <div class="container">
       <div class="row justify-content-center">
 
@@ -61,27 +61,36 @@
             <form [formGroup]="step1Form" class="forms gv" (keydown.enter)="registerUser()">
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-user"></i>Nome Completo</div>
                   </div>
-                  <input type="text" class="form-control" id="inputNome" placeholder="Como é pra gente te chamar?" [(ngModel)]="user.fullname"
+                  <!-- desktop -->
+                  <input type="text" class="form-control desktop" placeholder="Como é pra gente te chamar?" [(ngModel)]="user.fullname"
                     formControlName="fullname" name="fullname" required>
+
+                  <!-- mobile -->
+                  <i class="fas fa-user mobile mobile-icon"></i>
+                  <input type="text" class="form-control mobile" placeholder="Nome completo" [(ngModel)]="user.fullname" formControlName="fullname"
+                    name="fullname" required>
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
                   </div>
                 </div>
-                <div *ngIf="isValidPersonal('fullname')" class='error-message'>
-                  Preencha o nome completo.
-                </div>
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
-                    <div class="input-group-text">
+                  <div class="input-group-prepend desktop">
+                    <div class="input-group-text ">
                       <i class="fas fa-mobile-alt"></i>Celular</div>
                   </div>
-                  <input type="tel" class="form-control" id="inputCelular" placeholder="Vamos falar com você por aqui!" [textMask]="phoneMask()"
+                  <!-- desktop -->
+                  <input type="tel" class="form-control desktop" placeholder="Vamos falar com você por aqui!" [textMask]="phoneMask()"
+                    [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" (blur)="checkPhone()" required>
+
+                    <!-- mobile -->
+                    <i class="fas fa-mobile-alt mobile mobile-icon"></i>
+                    <input type="tel" class="form-control mobile" placeholder="Celular" [textMask]="phoneMask()"
                     [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" (blur)="checkPhone()" required>
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
@@ -96,11 +105,17 @@
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-envelope"></i>E-mail</div>
                   </div>
-                  <input type="email" class="form-control" id="inputEmail" placeholder="Relaxa, nós também não gostamos de spam" [(ngModel)]="user.email"
+                  <!-- desktop -->
+                  <input type="email" class="form-control desktop" placeholder="Relaxa, nós também não gostamos de spam" [(ngModel)]="user.email"
+                    (blur)="checkEmail()" formControlName="email" name="email" email required>
+
+                    <!-- mobile -->
+                    <i class="fas fa-envelope mobile-icon mobile"></i>
+                    <input type="email" class="form-control mobile" placeholder="Email" [(ngModel)]="user.email"
                     (blur)="checkEmail()" formControlName="email" name="email" email required>
                   <div class="valid-feedback" *ngIf="!invalidEmail">
                     <i class="fa fa-check"></i>
@@ -115,12 +130,14 @@
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-gift"></i>Data de Nascimento</div>
                   </div>
-                  <p-inputMask class="form-control p-inputMask gv" id="inputDatadeNascimento" (onBlur)="checkDate()" placeholder="Os programas da AIESEC são para pessoas de 18 à 30 anos"
-                    [(ngModel)]="user.birthdate" formControlName="birthdate" name="birthdate" required mask="99/99/9999"></p-inputMask>
+                  
+                  <i class="fas fa-gift mobile mobile-icon"></i>
+                  <p-inputMask class="form-control p-inputMask gv" id="inputDatadeNascimento" (onBlur)="checkDate()" placeholder="{{ placeholderBirthdate }}" 
+                  [(ngModel)]="user.birthdate" formControlName="birthdate" name="birthdate" required mask="99/99/9999"></p-inputMask>
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
                   </div>
@@ -137,11 +154,17 @@
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-lock"></i>Senha</div>
                   </div>
-                  <input type="password" class="form-control" id="inputSenha" placeholder="É para o seu perfil no aiesec.org" [(ngModel)]="user.password"
+                  <!-- desktop -->
+                  <input type="password" class="form-control desktop" placeholder="É para o seu perfil no aiesec.org" [(ngModel)]="user.password"
+                    formControlName="password" name="password" required>
+
+                  <!-- mobile -->
+                  <i class="fas fa-lock mobile mobile-icon"></i>
+                  <input type="password" class="form-control mobile" placeholder="Senha" [(ngModel)]="user.password"
                     formControlName="password" name="password" required>
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
@@ -150,12 +173,18 @@
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-lock"></i>Confirmar Senha</div>
                   </div>
-                  <input type="password" class="form-control" id="inputConfirmeSenha" placeholder="" [(ngModel)]="user.repassword" formControlName="repassword"
+                  <!-- desktop -->
+                  <input type="password" class="form-control desktop" placeholder="" [(ngModel)]="user.repassword" formControlName="repassword"
                     name="repassword" required>
+
+                  <!-- mobile -->
+                  <i class="fas fa-lock mobile mobile-icon"></i>
+                  <input type="password" class="form-control mobile" [(ngModel)]="user.repassword" formControlName="repassword"
+                    name="repassword" required placeholder="Confirmar senha">
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
                   </div>
@@ -300,7 +329,7 @@
                     <div class="col-sm-12" id="content-resultado">
                       <p>
                         Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por projetos de intercâmbio voluntário
-                        na data e destina ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
+                        na data e destino ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
                       </p>
                       <button (click)="accessAiesec()" type="button" class="btn btn-primary">Acessar o Portal de Oportunidades</button>
                     </div>
