--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -60,7 +60,7 @@
             background-image: url('../../assets/products/ge/ge-intro.jpg');
         }
         &.landing-page {
-            background-image: url('../../assets/images/header.png');
+            background-image: url('../../assets/images/header.jpg');
             z-index: 5
         }
     }
