--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -264,7 +264,7 @@
             <a routerLink="/landing-page-gv" class="animated fadeIn faster" *ngIf="actual == 1">
               <div class="cases case-1" drag-scroll-item>
                 <div class="box-case-bg"></div>
-                <div class="box-case">
+                <div class="box-case box-case-gv">
                   <div class="logo-product gv"></div>
                   <p class='product-story-info'>
                     "Meu Voluntário Global foi uma experiência muito desafiadora na qual pude me desenvolver muito e impactar o mundo ao meu
