--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -31,7 +31,7 @@
   </section>
 
   <!-- Form -->
-  <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading">
+  <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading" (window:resize)="onResize($event)">
     <div class="container">
       <div class="row justify-content-center">
 
@@ -51,12 +51,18 @@
             <form [formGroup]="step1Form" class="forms gv" (keydown.enter)="registerUser()">
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-user"></i>Nome Completo</div>
                   </div>
-                  <input type="text" class="form-control" id="inputNome" placeholder="Como é pra gente te chamar?" [(ngModel)]="user.fullname"
+                  <!-- desktop -->
+                  <input type="text" class="form-control desktop" placeholder="Como é pra gente te chamar?" [(ngModel)]="user.fullname"
                     formControlName="fullname" name="fullname" required>
+
+                  <!-- mobile -->
+                  <i class="fas fa-user mobile mobile-icon"></i>
+                  <input type="text" class="form-control mobile" placeholder="Nome completo" [(ngModel)]="user.fullname" formControlName="fullname"
+                    name="fullname" required>
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
                   </div>
@@ -67,11 +73,17 @@
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-mobile-alt"></i>Celular</div>
                   </div>
-                  <input type="tel" class="form-control" id="inputCelular" placeholder="Vamos falar com você por aqui!" [textMask]="phoneMask()"
+                  <!-- desktop -->
+                  <input type="tel" class="form-control desktop" placeholder="Vamos falar com você por aqui!" [textMask]="phoneMask()"
+                    [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" (blur)="checkPhone()" required>
+
+                    <!-- mobile -->
+                    <i class="fas fa-mobile-alt mobile mobile-icon"></i>
+                    <input type="tel" class="form-control mobile" placeholder="Celular" [textMask]="phoneMask()"
                     [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" (blur)="checkPhone()" required>
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
@@ -86,11 +98,17 @@
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-envelope"></i>E-mail</div>
                   </div>
-                  <input type="email" class="form-control" id="inputEmail" placeholder="Relaxa, nós também não gostamos de spam" [(ngModel)]="user.email"
+                  <!-- desktop -->
+                  <input type="email" class="form-control desktop" placeholder="Relaxa, nós também não gostamos de spam" [(ngModel)]="user.email"
+                    (blur)="checkEmail()" formControlName="email" name="email" email required>
+
+                    <!-- mobile -->
+                    <i class="fas fa-envelope mobile-icon mobile"></i>
+                    <input type="email" class="form-control mobile" placeholder="Email" [(ngModel)]="user.email"
                     (blur)="checkEmail()" formControlName="email" name="email" email required>
                   <div class="valid-feedback" *ngIf="!invalidEmail">
                     <i class="fa fa-check"></i>
@@ -105,12 +123,14 @@
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-gift"></i>Data de Nascimento</div>
                   </div>
-                  <p-inputMask class="form-control p-inputMask gv" id="inputDatadeNascimento" (onBlur)="checkDate()" placeholder="Os programas da AIESEC são para pessoas de 18 à 30 anos"
-                    [(ngModel)]="user.birthdate" formControlName="birthdate" name="birthdate" required mask="99/99/9999"></p-inputMask>
+                  
+                  <i class="fas fa-gift mobile mobile-icon"></i>
+                  <p-inputMask class="form-control p-inputMask gv" id="inputDatadeNascimento" (onBlur)="checkDate()" placeholder="{{ placeholderBirthdate }}" 
+                  [(ngModel)]="user.birthdate" formControlName="birthdate" name="birthdate" required mask="99/99/9999"></p-inputMask>
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
                   </div>
@@ -127,11 +147,17 @@
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-lock"></i>Senha</div>
                   </div>
-                  <input type="password" class="form-control" id="inputSenha" placeholder="É para o seu perfil no aiesec.org" [(ngModel)]="user.password"
+                  <!-- desktop -->
+                  <input type="password" class="form-control desktop" placeholder="É para o seu perfil no aiesec.org" [(ngModel)]="user.password"
+                    formControlName="password" name="password" required>
+
+                  <!-- mobile -->
+                  <i class="fas fa-lock mobile mobile-icon"></i>
+                  <input type="password" class="form-control mobile" placeholder="Senha" [(ngModel)]="user.password"
                     formControlName="password" name="password" required>
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
@@ -140,12 +166,18 @@
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
+                  <div class="input-group-prepend desktop">
                     <div class="input-group-text">
                       <i class="fas fa-lock"></i>Confirmar Senha</div>
                   </div>
-                  <input type="password" class="form-control" id="inputConfirmeSenha" placeholder="" [(ngModel)]="user.repassword" formControlName="repassword"
+                  <!-- desktop -->
+                  <input type="password" class="form-control desktop" placeholder="" [(ngModel)]="user.repassword" formControlName="repassword"
                     name="repassword" required>
+
+                  <!-- mobile -->
+                  <i class="fas fa-lock mobile mobile-icon"></i>
+                  <input type="password" class="form-control mobile" [(ngModel)]="user.repassword" formControlName="repassword"
+                    name="repassword" required placeholder="Confirmar senha">
                   <div class="valid-feedback">
                     <i class="fas fa-check"></i>
                   </div>
