fix(landing page/menu): fix content

--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -367,8 +367,8 @@
                   <div class="row justify-content-center">
                     <div class="col-sm-12" id="content-resultado">
                       <p>
-                        Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por projetos de intercâmbio profissional
-                        em startups na data e destino ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
+                        Agora que você criou a sua conta, você poderá acessar a nossa plataforma e começar a buscar por imersão internacional
+                        em startup na data e destino ideal para você! Fique atento ao seu e-mail onde enviaremos mais informações.
                       </p>
                       <button (click)="accessAiesec()" type="button" class="btn btn-primary">Acessar o Portal de Oportunidades</button>
                     </div>
