--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -653,7 +653,8 @@ label {
 
 .form-check-label {
     margin-bottom: 0;
-    text-decoration: underline;
+    text-align: left;
+    font-size: 15px;
 }
 
 .dropdown,
@@ -1076,6 +1077,9 @@ label {
         font-size: 14px;
         font-weight: 400;
         line-height: 18px;
+    }
+    .form-check-label {
+        font-size: 13px;
     }
 }
 
