--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -175,14 +175,14 @@
       </h2>
     </div>
     <div class="product-info" *ngIf="actualPage == 'landing-page'">
-      <h1 class='color-white bold'>
-        Liderança
+      <h1 class='color-white bold intro'>
+        A AIESEC é o maior movimento de liderança jovem do mundo
       </h1>
-      <h2 class='color-white'>
-        Uma liderança sustentável é a solução para um futuro melhor
+      <h2 class='color-white intro'>
+        Acreditamos no intercâmbio como ferramenta para desenvolver uma liderança sustentável.
       </h2>
       <button (click)="scrollToGlobal()" class="button border border-white without-background color-white uppercase margin">
-        Saiba mais
+        Conheça nossos intercâmbios
       </button>
     </div>
   </div>
