fix(menu): text changed

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -66,7 +66,7 @@
               </ul>
             </li>
             <li>
-              Planeje seu intercâmbio
+              Planeje sua viagem
               <ul class="animated fadeIn faster">
                 <a href="http://aiesec.org.br/cipassagensaereas/">
                   <li>
@@ -144,7 +144,7 @@
               </ul>
             </li>
             <li>
-              <span>Planeje seu intercâmbio</span>
+              <span>Planeje sua viagem</span>
               <ul class="animated fadeIn faster">
                 <a href="http://aiesec.org.br/cipassagensaereas/">
                   <li>
