fix(general): deploy fixes

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -23,7 +23,7 @@
                 <li routerLink="/landing-page-gt">
                   Talento Global
                 </li>
-                <a href="http://aiesec.org.br/hospede-um-intercambista/">
+                <a href="http://blog.aiesec.org.br/hospede-um-intercambista/">
                   <li>
                     Hospede um intercambista
                   </li>
@@ -33,19 +33,19 @@
             <li>
               Seja nosso Parceiro
               <ul class="animated fadeIn faster">
-                <a href="http://aiesec.org.br/seja-parceiro/ong/">
+                <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">
                   <li>
                     ONG
                   </li>
                 </a>
-                <a href="http://aiesec.org.br/seja-parceiro/empresas/">
+                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
                   <li>
                     Empresas
                   </li>
                 </a>
               </ul>
             </li>
-            <a href="http://aiesec.org.br/youthspeak/">
+            <a href="http://blog.aiesec.org.br/youthspeak/">
               <li>
                 Youthspeak
               </li>
@@ -68,7 +68,7 @@
             <li>
               Planeje sua viagem
               <ul class="animated fadeIn faster">
-                <a href="http://aiesec.org.br/cipassagensaereas/">
+                <a href="http://blog.aiesec.org.br/cipassagensaereas/">
                   <li>
                     Passagens Aéreas
                   </li>
@@ -80,7 +80,7 @@
                 </a>
               </ul>
             </li>
-            <a href="http://aiesec.org.br/contato/">
+            <a href="http://blog.aiesec.org.br/contato/">
               <li>
                 Contato
               </li>
@@ -101,7 +101,7 @@
                 <li routerLink="/landing-page-gt" [ngx-scroll-to]="'#header-product'">
                   Talento Global
                 </li>
-                <a href="http://aiesec.org.br/hospede-um-intercambista/">
+                <a href="http://blog.aiesec.org.br/hospede-um-intercambista/">
                   <li>
                     Hospede um intercambista
                   </li>
@@ -111,19 +111,19 @@
             <li>
               <span>Seja nosso Parceiro</span>
               <ul class="animated fadeIn faster">
-                <a href="http://aiesec.org.br/seja-parceiro/ong/">
+                <a href="http://blog.aiesec.org.br/seja-parceiro/ong/">
                   <li>
                     ONG
                   </li>
                 </a>
-                <a href="http://aiesec.org.br/seja-parceiro/empresas/">
+                <a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">
                   <li>
                     Empresas
                   </li>
                 </a>
               </ul>
             </li>
-            <a href="http://aiesec.org.br/youthspeak/">
+            <a href="http://blog.aiesec.org.br/youthspeak/">
               <li>
                 <span>Youthspeak</span>
               </li>
@@ -146,7 +146,7 @@
             <li>
               <span>Planeje sua viagem</span>
               <ul class="animated fadeIn faster">
-                <a href="http://aiesec.org.br/cipassagensaereas/">
+                <a href="http://blog.aiesec.org.br/cipassagensaereas/">
                   <li>
                     Passagens Aéreas
                   </li>
@@ -158,7 +158,7 @@
                 </a>
               </ul>
             </li>
-            <a href="http://aiesec.org.br/contato/">
+            <a href="http://blog.aiesec.org.br/contato/">
               <li>
                 <span>Contato</span>
               </li>
