--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -120,22 +120,22 @@
         <div class="row">
           <div class="footer-group-links col-md-4 col-sm-6">
             <p class="semibold footer-link-title">Institucional</p>
-            <p><a href="http://aiesec.org.br/a-aiesec/">A AIESEC</a></p>
-            <p><a href="http://aiesec.org.br/faca-parte/">Faça parte</a></p>
-            <p><a href="http://aiesec.org.br/alumni/">Alummi</a></p>
-            <p><a href="http://aiesec.org.br/youthspeak/">YouthSpeak</a></p>
+            <p><a href="http://blog.aiesec.org.br/a-aiesec/">A AIESEC</a></p>
+            <p><a href="http://blog.aiesec.org.br/faca-parte/">Faça parte</a></p>
+            <p><a href="http://blog.aiesec.org.br/alumni/">Alummi</a></p>
+            <p><a href="http://blog.aiesec.org.br/youthspeak/">YouthSpeak</a></p>
           </div>
           <div class="footer-group-links col-md-4 col-sm-6">
             <p class="semibold footer-link-title">Institucional</p>
             <p><a routerLink="../landing-page-ge">Empreendedor Global</a></p>
             <p><a routerLink="../landing-page-gt">Talento Global</a></p>
             <p><a routerLink="../landing-page-gv">Voluntário Global</a></p>
-            <p><a href="http://aiesec.org.br/hospede-um-intercambista/">Hospede um intercambista</a></p>
+            <p><a href="http://blog.aiesec.org.br/hospede-um-intercambista/">Hospede um intercambista</a></p>
           </div>
           <div class="footer-group-links col-md-4 col-sm-6">
             <p class="semibold footer-link-title">Seja parceiro</p>
-            <p><a href="http://aiesec.org.br/seja-parceiro/ong/">ONG</a></p>
-            <p><a href="http://aiesec.org.br/seja-parceiro/empresas/">Empresas</a></p>
+            <p><a href="http://blog.aiesec.org.br/seja-parceiro/ong/">ONG</a></p>
+            <p><a href="http://blog.aiesec.org.br/seja-parceiro/empresas/">Empresas</a></p>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
             <p><a href="http://aiesec.blog.br/">Estudantes</a></p>
           </div>
           <div class="footer-group-links col-md-3 col-sm-6">
-            <p class="semibold footer-link-title"><a href="http://aiesec.org.br/contato/">Contato</a></p>
+            <p class="semibold footer-link-title"><a href="http://blog.aiesec.org.br/contato/">Contato</a></p>
           </div>
           <div class="footer-social-networks col-md-6 col-sm-6">
             <a target="_blank" href="https://www.facebook.com/AIESECinBrazil/"><i class="fab fa-facebook-square"></i></a>
